fix overflow bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,13 @@
   margin: 0;
 }
 
+body,
+html {
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+
 .clouds-page {
   overflow: hidden;
   width: 400px;
